Removed Pb suffix from public grpc api (#46)
* Removes pb suffix from public api contract on: server, lhctl, e2e tests, sdk-go, and sdk-java

* Adds and enforces new google linter for java code following Palatir style

---------

Co-authored-by: Mateo Rojas <mateo@littlehorse.io>