@@ -21,49 +21,33 @@ import java.util.Set;
 import java.util.UUID;
 import lombok.extern.slf4j.Slf4j;
 
-/**
- * This class is used to configure the LHClient class.
- */
+/** This class is used to configure the LHClient class. */
 @Slf4j
 public class LHClientConfig extends ConfigBase {
 
-    /**
-     * The bootstrap host for the LH Server.
-     */
+    /** The bootstrap host for the LH Server. */
     public static final String API_HOST_KEY = "LHC_API_HOST";
 
-    /**
-     * The bootstrap port for the LH Server.
-     */
+    /** The bootstrap port for the LH Server. */
     public static final String API_PORT_KEY = "LHC_API_PORT";
 
-    /**
-     * The Client Id.
-     */
+    /** The Client Id. */
     public static final String CLIENT_ID_KEY = "LHC_CLIENT_ID";
 
-    /**
-     * Optional location of Client Cert file.
-     */
+    /** Optional location of Client Cert file. */
     public static final String CLIENT_CERT_KEY = "LHC_CLIENT_CERT";
 
-    /**
-     * Optional location of Client Private Key File.
-     */
+    /** Optional location of Client Private Key File. */
     public static final String CLIENT_KEY_KEY = "LHC_CLIENT_KEY";
 
-    /**
-     * Optional location of CA Cert File.
-     */
+    /** Optional location of CA Cert File. */
     public static final String CA_CERT_KEY = "LHC_CA_CERT";
 
     public static final String OAUTH_CLIENT_ID_KEY = "LHC_OAUTH_CLIENT_ID";
     public static final String OAUTH_CLIENT_SECRET_KEY = "LHC_OAUTH_CLIENT_SECRET";
-    public static final String OAUTH_AUTHORIZATION_SERVER_KEY =
-        "LHC_OAUTH_AUTHORIZATION_SERVER";
+    public static final String OAUTH_AUTHORIZATION_SERVER_KEY = "LHC_OAUTH_AUTHORIZATION_SERVER";
 
-    private static final Set<String> configNames = Collections.unmodifiableSet(
-        Set.of(
+    private static final Set<String> configNames = Collections.unmodifiableSet(Set.of(
             LHClientConfig.API_HOST_KEY,
             LHClientConfig.API_PORT_KEY,
             LHClientConfig.CLIENT_ID_KEY,
@@ -72,12 +56,11 @@ public class LHClientConfig extends ConfigBase {
             LHClientConfig.CA_CERT_KEY,
             LHClientConfig.OAUTH_AUTHORIZATION_SERVER_KEY,
             LHClientConfig.OAUTH_CLIENT_ID_KEY,
-            LHClientConfig.OAUTH_CLIENT_SECRET_KEY
-        )
-    );
+            LHClientConfig.OAUTH_CLIENT_SECRET_KEY));
 
     /**
      * Returns a set of all config names.
+     *
      * @return A Set of all config names.
      */
     public static Set<String> configNames() {
@@ -90,9 +73,7 @@ public class LHClientConfig extends ConfigBase {
     private OAuthConfig oauthConfig;
     private OAuthCredentialsProvider oauthCredentialsProvider;
 
-    /**
-     * Creates an LHClientConfig. Loads default values for config from env vars.
-     */
+    /** Creates an LHClientConfig. Loads default values for config from env vars. */
     public LHClientConfig() {
         super();
         createdChannels = new HashMap<>();
@@ -100,6 +81,7 @@ public class LHClientConfig extends ConfigBase {
 
     /**
      * Creates an LHClientConfig with provided config values.
+     *
      * @param props configuration values.
      */
     public LHClientConfig(Properties props) {
@@ -109,6 +91,7 @@ public class LHClientConfig extends ConfigBase {
 
     /**
      * Creates an LHClientConfig with config props in a specified .properties file.
+     *
      * @param propLocation the location of the .properties file.
      */
     public LHClientConfig(String propLocation) {
@@ -118,6 +101,7 @@ public class LHClientConfig extends ConfigBase {
 
     /**
      * Creates an LHClientConfig with provided config values.
+     *
      * @param configs configuration values.
      */
     public LHClientConfig(Map<String, Object> configs) {
@@ -126,8 +110,9 @@ public class LHClientConfig extends ConfigBase {
     }
 
     /**
-     * Gets a Blocking gRPC stub for the LH Public API on the configured host/port,
-     * which is generally the loadbalancer url.
+     * Gets a Blocking gRPC stub for the LH Public API on the configured host/port, which is
+     * generally the loadbalancer url.
+     *
      * @return a blocking gRPC stub for the configured host/port.
      * @throws IOException if stub creation fails.
      */
@@ -136,8 +121,9 @@ public class LHClientConfig extends ConfigBase {
     }
 
     /**
-     * Gets an Async gRPC stub for the LH Public API on the configured host/port,
-     * which is generally the loadbalancer url.
+     * Gets an Async gRPC stub for the LH Public API on the configured host/port, which is generally
+     * the loadbalancer url.
+     *
      * @return an async gRPC stub for the configured host/port.
      * @throws IOException if stub creation fails.
      */
@@ -146,9 +132,10 @@ public class LHClientConfig extends ConfigBase {
     }
 
     /**
-     * Gets an Async gRPC stub for the LH Public API on a specified host and port.
-     * Generally used by the Task Worker, which needs to connect directly to a
-     * specific LH Server rather than the bootstrap host (loadbalancer).
+     * Gets an Async gRPC stub for the LH Public API on a specified host and port. Generally used by
+     * the Task Worker, which needs to connect directly to a specific LH Server rather than the
+     * bootstrap host (loadbalancer).
+     *
      * @param host is the host that the LH Server lives on.
      * @param port is the port that the LH Server lives on.
      * @return an async gRPC stub for that host/port combo.
@@ -156,34 +143,32 @@ public class LHClientConfig extends ConfigBase {
      */
     public LHPublicApiStub getAsyncStub(String host, int port) throws IOException {
         if (isOauth()) {
-            return LHPublicApiGrpc
-                .newStub(getChannel(host, port))
-                .withCallCredentials(oauthCredentialsProvider);
+            return LHPublicApiGrpc.newStub(getChannel(host, port)).withCallCredentials(oauthCredentialsProvider);
         }
         return LHPublicApiGrpc.newStub(getChannel(host, port));
     }
 
     /**
-     * Gets a Blocking gRPC stub for the LH Public API on a specified host and port.
-     * Generally used by the Task Worker, which needs to connect directly to a
-     * specific LH Server rather than the bootstrap host (loadbalancer).
+     * Gets a Blocking gRPC stub for the LH Public API on a specified host and port. Generally used
+     * by the Task Worker, which needs to connect directly to a specific LH Server rather than the
+     * bootstrap host (loadbalancer).
+     *
      * @param host is the host that the LH Server lives on.
      * @param port is the port that the LH Server lives on.
      * @return a blocking gRPC stub for that host/port combo.
      * @throws IOException if stub creation fails.
      */
-    public LHPublicApiBlockingStub getBlockingStub(String host, int port)
-        throws IOException {
+    public LHPublicApiBlockingStub getBlockingStub(String host, int port) throws IOException {
         if (isOauth()) {
-            return LHPublicApiGrpc
-                .newBlockingStub(getChannel(host, port))
-                .withCallCredentials(oauthCredentialsProvider);
+            return LHPublicApiGrpc.newBlockingStub(getChannel(host, port))
+                    .withCallCredentials(oauthCredentialsProvider);
         }
         return LHPublicApiGrpc.newBlockingStub(getChannel(host, port));
     }
 
     /**
      * Returns a gRPC channel for the specified host/port combination.
+     *
      * @param host The host to connect to.
      * @param port the port to connect to.
      * @return a gRPC channel for that specified host/port combo.
@@ -206,21 +191,15 @@ public class LHClientConfig extends ConfigBase {
             out = ManagedChannelBuilder.forAddress(host, port).usePlaintext().build();
         } else {
             log.info("Using secure connection!");
-            TlsChannelCredentials.Builder tlsBuilder = TlsChannelCredentials
-                .newBuilder()
-                .trustManager(new File(caCertFile));
+            TlsChannelCredentials.Builder tlsBuilder =
+                    TlsChannelCredentials.newBuilder().trustManager(new File(caCertFile));
 
             if (clientCertFile != null && clientKeyFile != null) {
                 log.info("Using mtls!");
-                tlsBuilder.keyManager(
-                    new File(clientCertFile),
-                    new File(clientKeyFile)
-                );
+                tlsBuilder.keyManager(new File(clientCertFile), new File(clientKeyFile));
             }
 
-            out =
-                Grpc
-                    .newChannelBuilderForAddress(host, port, tlsBuilder.build())
+            out = Grpc.newChannelBuilderForAddress(host, port, tlsBuilder.build())
                     .build();
         }
 
@@ -238,9 +217,7 @@ public class LHClientConfig extends ConfigBase {
 
     public String getClientId() {
         return getOrSetDefault(
-            CLIENT_ID_KEY,
-            "client-" + UUID.randomUUID().toString().replaceAll("-", "")
-        );
+                CLIENT_ID_KEY, "client-" + UUID.randomUUID().toString().replaceAll("-", ""));
     }
 
     public boolean isOauth() {
@@ -256,9 +233,7 @@ public class LHClientConfig extends ConfigBase {
         log.info("OAuth is enable");
 
         if (oauthConfig == null) {
-            oauthConfig =
-                OAuthConfig
-                    .builder()
+            oauthConfig = OAuthConfig.builder()
                     .authorizationServer(URI.create(authServer))
                     .clientId(clientId)
                     .clientSecret(clientSecret)
@@ -279,6 +254,6 @@ public class LHClientConfig extends ConfigBase {
 
     @Override
     protected String[] getEnvKeyPrefixes() {
-        return new String[] { "LHC_" };
+        return new String[] {"LHC_"};
     }
 }
